--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
     <title>Restaurant Tip Calculator - Split Bills & Calculate Tips Easily</title>
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <meta name="google-site-verification" content="R2a-Z1Ev5SDz4sz9CPt-1ieYPfzLFanRFEZtD10amsE" />
+    <link rel="canonical" href="https://restaurant-tip-jn74.vercel.app/" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <script type="application/ld+json">
+    
     {
       "@context": "https://schema.org",
       "@type": "WebApplication",
       "name": "Restaurant Tip Calculator",
       "description": "A free, easy-to-use restaurant tip calculator that supports bill splitting, custom percentages, and provides a comprehensive tipping guide.",
-      "url": "https://www.calculatorvalue.com/financial/restaurant/tip",
+      "url": "https://restaurant-tip-jn74.vercel.app/",
       "applicationCategory": "FinanceApplication",
       "operatingSystem": "Any",
       "offers": {
