--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
     <meta name="google-site-verification" content="R2a-Z1Ev5SDz4sz9CPt-1ieYPfzLFanRFEZtD10amsE" />
-    <link rel="canonical" href="https://restaurant-tip-jn74.vercel.app/" />
+    <link rel="canonical" href="https://restaurant-tip.vercel.app/" />
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <script type="application/ld+json">
     
@@ -18,7 +18,7 @@
       "@type": "WebApplication",
       "name": "Restaurant Tip Calculator",
       "description": "A free, easy-to-use restaurant tip calculator that supports bill splitting, custom percentages, and provides a comprehensive tipping guide.",
-      "url": "https://restaurant-tip-jn74.vercel.app/",
+      "url": "https://restaurant-tip.vercel.app/",
       "applicationCategory": "FinanceApplication",
       "operatingSystem": "Any",
       "offers": {
@@ -432,7 +432,7 @@
             <div class="promo-box">
                 <h3>Looking for More?</h3>
                 <p>For more specialized calculators and financial tools, check out our main site.</p>
-                <a href="https://www.calculatorvalue.com/financial/restaurant/tip" target="_blank" rel="noopener noreferrer">Visit CalculatorValue.com</a>
+                <a href="https://www.calculatorvalue.com/financial/restaurant/tip">Visit CalculatorValue.com</a>
             </div>
             
             <div class="guide-section">
